# sheet-music-measure-detector

./: .gitignore  CLAUDE.md  README.md  data.yaml  main.py  pyproject.toml  train.py
scripts/: auto_label2.py  label_structure.py  pdf_to_images.py  sheet_cv.py  split_data.py  visualize_labels.py
scripts/old/: auto_label.py  auto_label2.py
